# capital-copilot-be

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  sample.env  tailwind.config.js
api/: adapters.py  admin.py  apps.py  authentication.py  exception_handler.py  middleware.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  __init__.py
common/: apps.py
common/templatetags/: __init__.py  common_tags.py
copilot/: __init__.py  asgi.py  copilot_shared.py  expired_files.py  formatter_with_exceptions.py  handlers_manager.py  logging_service.py  path_tracking_file_handler.py  settings.py  tests_logging_service.py  urls.py  wsgi.py
extensions/: __init__.py  plugin_base.py  views.py
extensions/plugins/: insert_plugin.py  update_plugin.py
nginx/: nginx.conf
notes/: ANSIBLE.md  DATABASE_MANAGEMENT.md  DEVELOPMENT.md  DJANGO_AUTH.md  DJANGO_DB_MGMT.md  DJANGO_MGMT.md  DJANGO_SETUP.md  FRONTEND.md  GRAPHQL.md  IDE.md  INITIAL_CONFIG.md  OPENBB.md  PLOTLY_DASH.md  PRODUCTION.md  PRODUCTION_BE.md  PRODUCTION_FE.md  SQUEEZE.md  TERRAFORM.md  TESTS.md  WAF.md
notes/plugins-custom/: EXTERNAL_PLUGINS.md  INTERNAL_PLUGINS.md  PLUGINS.md
notes/plugins-django/: EXTERNAL_PLUGINS.md  INTERNAL_PLUGINS.md
scripts/: .gitignore  Insomnia.yaml  check_commit_msg.py  check_copyright.py  check_versions_sync.py  update_changelog.py
scripts/ansible/: deploy-be.yml  deploy-fe.yml  hosts.ini.example  start-be.yml
scripts/ansible-fe/: hosts.ini.example  playbook.yml
scripts/be/: hosts.ini.example  playbook.yml
scripts/be/roles/django/tasks/: main.yml
scripts/fe/: hosts.ini.example
scripts/research/: alpha_earnings.py  logging_test.py  openbb_chart.py  openbb_earnings.py  openbb_logging.py  openbb_search.py  plugin_prototype.py
scripts/ses-config/: README.md  main.tf  tfvars.example
scripts/sql/: drop_user.sql  select_account_emailadress.sql  select_django_session.sql
src/: styles.css
static/css/: styles.css
static/js/: darkModeComponent.js
templates/: base.html  contact.html  landing_page.html  test.html
templates/account/: account_inactive.html  base_entrance.html  base_manage.html  email.html  login.html  logout.html  password_change.html  signup-.html  signup.html
templates/account/email/: email_confirmation_message.txt  password_reset_key_message.txt
templates/landing/: contact.html  home.html
templates/plugins/: task_detail.html
templates/snippets/: footer.html  form_fields.html  header.html  messages.html  non_field_form_errors.html
templates/socialaccount/: base_entrance.html  base_manage.html
templates/socialaccount/snippets/: icon_github.html  icon_google.html  login.html  provider_list.html
templates/users/: preferences.js  social_accounts.html
users/: __init__.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  tests.py  tests_accounts.py  tests_admin_middleware.py  tests_social_accounts.py  tests_views.py  views.py
users/migrations/: 0001_initial.py  0002_userpreferences.py  0003_userpreferences_user.py
(+15 files in other folders)
